--- a/css/styl.css
+++ b/css/styl.css
@@ -11,180 +11,170 @@ body {
   margin: 0 auto;
   max-width: 1080px; }
 
-/* Fonts */
-h1 {
-  font-family: "Oswald";
-  font-weight: normal;
-  font-size: 60px;
-  text-align: center;
-  margin: 5px 0;
-  padding: 0;
-  z-index: 1;
-  position: relative; }
-
-p {
-  font-family: "Oswald";
-  font-weight: normal;
-  font-size: 30px;
-  text-align: center;
-  margin: 5px 0;
-  padding: 0;
-  z-index: 1;
-  position: relative; }
-
+/* Header */
 #header {
   width: 100%;
-  background: url("../img/header-bg.png");
-  height: 80px;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+  background: -webkit-linear-gradient(9deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8));
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(9deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8));
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 120px;
+  top: -30px;
   position: fixed;
-  margin-top: 30px;
-  z-index: 5; }
-
-#nav {
-  float: right;
-  margin-top: 20px; }
-
-#logo a {
-  color: #fff;
-  text-decoration: none;
-  float: left;
-  font-size: 30px;
-  margin-top: 20px;
-  color: #fff;
-  font-family: "Wellfleet";
-  font-weight: bold; }
-
-#nav ul {
-  list-style: none;
-  display: block;
-  margin: 0 auto;
-  list-style: none; }
-
-#nav li {
-  margin-top: 9px;
-  float: left;
-  padding-left: 21px; }
-
-#nav li a {
-  color: #fff;
-  opacity: 0.6;
-  font-size: 16px;
-  text-decoration: none;
-  font-family: 'Wellfleet'; }
-
-#nav li a.active {
-  color: #fff;
-  opacity: 1;
-  border-bottom: 2px solid #fff; }
-
-#nav li a:hover {
-  color: #fff;
-  opacity: 1; }
+  z-index: 5;
+  transform: skewY(2deg); }
+  #header .content {
+    transform: skewY(-2deg);
+    margin-top: 40px;
+    max-width: 1960px; }
+    #header .content #nav {
+      float: right;
+      margin: 20px 100px 0 0; }
+      #header .content #nav ul {
+        list-style: none;
+        display: block;
+        margin: 0 auto;
+        list-style: none; }
+      #header .content #nav li {
+        margin-top: 9px;
+        float: left;
+        padding-left: 21px; }
+        #header .content #nav li a {
+          color: #fff;
+          opacity: 0.6;
+          font-size: 20px;
+          text-decoration: none;
+          font-family: 'Wellfleet'; }
+        #header .content #nav li a.active {
+          color: #fff;
+          opacity: 1;
+          border-bottom: 2px solid #fff; }
+        #header .content #nav li a:hover {
+          color: #fff;
+          opacity: 1; }
 
 .hidden {
   opacity: 0; }
 
-/* SLIDE 1 - SECTION */
-#slide1 {
-  background: url("../img/slide1.jpg") 50% 0 no-repeat fixed;
+/* Skews */
+.skew {
+  position: relative;
   color: #fff;
-  height: 900px;
+  z-index: 2; }
+  .skew .bot-skew {
+    background: #AFEEFF;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(0deg, #FFF, #AFEEFF);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(0deg, #FFF, #AFEEFF);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+  .skew .top-skew {
+    background: #AFEEFF;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(0deg, #AFEEFF, #FFF);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(0deg, #AFEEFF, #FFF);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+  .skew .default-skew {
+    box-sizing: content-box;
+    width: 50%;
+    height: 50px;
+    position: absolute;
+    top: -25px; }
+  .skew .left-skew-down {
+    left: 0;
+    transform: skewY(3deg);
+    /* SKEW */
+    border-right: 0.5px solid transparent; }
+  .skew .right-skew-down {
+    right: 0;
+    transform: skewY(-3deg);
+    /* SKEW */
+    border-left: 0.5px solid transparent; }
+  .skew .left-skew-up {
+    left: 0;
+    transform: skewY(-3deg);
+    /* SKEW */
+    border-right: 0.5px solid transparent; }
+  .skew .right-skew-up {
+    right: 0;
+    transform: skewY(3deg);
+    /* SKEW */
+    border-left: 0.5px solid transparent; }
+
+.skew-image {
+  background: url("../img/skew.jpg") 50% 0 no-repeat fixed;
+  color: #fff;
+  height: 300px;
   margin: 0;
-  padding: 350px 0 0 0;
+  padding: 0 0 0 0;
   background-size: cover; }
 
-/* SLIDE 2 - SECTION */
-#slide2 {
+/* Slide 1 */
+.slide1 {
+  background: url("../img/slide1.jpg") 50% 0 no-repeat fixed;
+  color: #fff;
+  height: 1000px;
+  margin: 0;
+  padding: 200px 0 0 0;
+  background-size: cover; }
+  .slide1 h1 {
+    font-family: "Oswald";
+    font-weight: normal;
+    font-size: 60px;
+    text-align: center;
+    margin: 5px 0;
+    padding: 0;
+    z-index: 1;
+    position: relative; }
+
+/* Slide 2 */
+.slide2 {
+  background: #FFF;
+  /* fallback for old browsers */
   display: flex;
   color: #333333;
   height: 100%;
-  margin: 100px 0; }
-  #slide2 h2, #slide2 p {
-    text-align: justify; }
-  #slide2 h2 {
-    font-size: 40px; }
-  #slide2 p {
+  padding: 100px 0;
+  text-align: justify; }
+  .slide2 h2, .slide2 p {
+    text-align: justify;
+    font-family: "Oswald"; }
+  .slide2 h2 {
+    font-size: 40px;
+    padding: 60px 0 30px 0; }
+  .slide2 p {
     font-size: 30px; }
-  #slide2 .box {
-    display: block;
-    width: 100%;
-    height: 100%;
-    float: left; }
 
-/* SLIDE 3 - SECTION */
-#slide3 {
-  color: #fff;
-  z-index: 1;
-  margin-bottom: 200px; }
-  #slide3 .skew-container {
-    display: flex; }
-    #slide3 .skew-container .left-skew {
-      box-sizing: content-box;
-      width: 50%;
-      height: 50px;
-      position: absolute;
-      background: #ffc500;
-      /* fallback for old browsers */
-      background: -webkit-linear-gradient(90deg, #182848, #348ac7, #182848);
-      /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(90deg, #182848, #348ac7, #182848);
-      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      left: 0;
-      transform: skewY(4deg);
-      /* SKEW */
-      border: 0.5px solid transparent;
-      flex: 1;
-      z-index: -2; }
-    #slide3 .skew-container .right-skew {
-      box-sizing: content-box;
-      width: 50%;
-      height: 50px;
-      position: absolute;
-      background: #ffc500;
-      /* fallback for old browsers */
-      background: -webkit-linear-gradient(90deg, #182848, #348ac7, #182848);
-      /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(90deg, #182848, #348ac7, #182848);
-      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      right: 0;
-      transform: skewY(-4deg);
-      /* SKEW */
-      border: 0.5px solid transparent;
-      flex: 1;
-      z-index: -2; }
-
-/* SLIDE 4 - SECTION */
-#slide4 {
+/* Slide 3 */
+.slide3 {
+  background: #FFF;
   position: relative;
   display: block;
   color: #333333;
-  z-index: 1; }
-  #slide4 h2 {
+  padding: 100px 0 200px 0;
+  z-index: 1;
+  text-align: center; }
+  .slide3 h2 {
     text-align: center;
     font-family: "Oswald";
     font-size: 40px;
-    margin: 30px 0 30px 0;
-    padding: 0; }
-  #slide4 h2:first-of-type {
-    margin-top: 80px; }
-  #slide4 #skills, #slide4 #tools, #slide4 #aims {
-    text-align: center; }
-  #slide4 #skills img, #slide4 #tools img, #slide4 #aims img {
-    width: 120px;
-    height: 120px;
-    padding: 10px;
-    margin: 0 auto;
+    margin: 0 0 30px 0;
+    padding: 20px 0; }
+  .slide3 img {
+    width: 100px;
+    height: 100px;
+    margin: 0 10px;
     display: inline-block; }
-  #slide4 #aims img {
-    margin-bottom: 200px; }
 
-/* SLIDE 5 - SECTION */
-#slide5 {
-  background: url(../img/slide5.jpg) 50% 0 fixed;
-  height: 200px;
+/* Slide 5 */
+.slide4 {
+  position: relative;
+  background-color: #FFF;
+  height: 400px;
   margin: 0 auto;
-  padding: 250px 0;
-  color: #fff;
-  background-size: cover; }
+  padding: 250px 0; }
 
 /*# sourceMappingURL=styl.css.map */
