--- a/css/styl.css
+++ b/css/styl.css
@@ -5,7 +5,8 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100%; }
+  width: 100%;
+  min-height: 100%; }
 
 .content {
   margin: 0 auto;
@@ -25,6 +26,9 @@ body {
   position: fixed;
   z-index: 5;
   transform: skewY(2deg); }
+  @media (max-width: 667px) {
+    #header {
+      display: none; } }
   #header .content {
     transform: skewY(-2deg);
     margin-top: 40px;
@@ -119,7 +123,13 @@ body {
   height: 1000px;
   margin: 0;
   padding: 200px 0 0 0;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
   background-size: cover; }
+  @media (max-width: 667px) {
+    .slide1 {
+      background-attachment: scroll; } }
   .slide1 h1 {
     font-family: "Oswald";
     font-weight: normal;
@@ -139,29 +149,24 @@ body {
   height: 100%;
   padding: 100px 0;
   text-align: justify; }
-  .slide2 h2, .slide2 p {
-    text-align: justify;
+  .slide2 h3, .slide2 p {
     font-family: "Oswald"; }
-  .slide2 h2 {
+  .slide2 h3 {
     font-size: 40px;
-    padding: 60px 0 30px 0; }
+    padding: 60px 0 30px 0;
+    text-align: center; }
   .slide2 p {
-    font-size: 30px; }
+    font-size: 30px;
+    text-align: justify; }
 
 /* Slide 3 */
 .slide3 {
   position: relative;
   display: block;
   color: #333333;
-  padding: 100px 0 200px 0;
+  padding: 50px 0 200px 0;
   z-index: 1;
-  text-align: center;
-  background: #AFEEFF;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(0deg, #FFF, #ffffcc, #FFF);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(0deg, #FFF, #ffffcc, #FFF);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+  text-align: center; }
   .slide3 .content {
     position: relative; }
     .slide3 .content .desccontainer {
@@ -185,24 +190,182 @@ body {
     font-family: "Oswald";
     font-size: 40px;
     margin: 0 0 30px 0;
-    padding: 40px 0 20px 0; }
+    padding: 40px 0 0 0; }
   .slide3 .logo {
     width: 100px;
     height: 100px;
     margin: 0 10px;
     transition: all 0.3s; }
 
-/* Slide 5 */
-.slide4 {
-  position: relative;
-  background-color: #FFF;
-  height: 400px;
-  margin: 0 auto;
-  padding: 250px 0; }
-
 .scale {
   transform: scale(1.1);
   background-image: url("../img/brackets.png");
   background-size: cover; }
+
+/* Slide 4 */
+.slide4 {
+  display: flex;
+  background-color: #FFF;
+  padding: 100px 0 50px 0; }
+  .slide4 .projectcontainer {
+    position: relative;
+    display: block;
+    height: 250px;
+    width: 33.33%;
+    /* older browsers fallback */
+    width: calc(100% / 3);
+    float: left; }
+    @media (max-width: 667px) {
+      .slide4 .projectcontainer {
+        width: 100%; } }
+    .slide4 .projectcontainer .projectimg {
+      height: 90%;
+      width: 90%;
+      margin: 0 auto;
+      display: block; }
+    .slide4 .projectcontainer .project-description {
+      display: none;
+      position: absolute;
+      background-color: rgba(0, 0, 0, 0.8);
+      width: 90%;
+      bottom: 10%;
+      left: 5%;
+      z-index: 1000;
+      color: #FFF;
+      font-family: 'Wellfleet';
+      font-size: 1.2em;
+      padding: 10px 10px; }
+  .slide4 h2 {
+    text-align: center;
+    font-family: "Oswald";
+    font-size: 40px;
+    padding: 0 0 10px 0; }
+  .slide4 p {
+    font-family: "Oswald";
+    font-size: 27px;
+    text-align: center;
+    margin: 0 auto; }
+
+/* Slide 5 */
+.slide5 {
+  background: #FFF;
+  /* fallback for old browsers */
+  color: #333333;
+  height: 100%;
+  padding: 50px 0 100px 0;
+  text-align: justify; }
+  .slide5 #form-messages, .slide5 .field {
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+    position: relative; }
+  .slide5 label {
+    display: block;
+    font-size: 1.2em;
+    margin-top: 2em;
+    margin-bottom: 0.5em;
+    color: #999999; }
+  .slide5 input {
+    width: 100%;
+    padding: 0.5em 0.5em;
+    font-size: 1.2em;
+    border-radius: 3px;
+    border: 1px solid #D9D9D9; }
+  .slide5 textarea {
+    width: 100%;
+    height: 200px;
+    padding: 0.5em 0.5em;
+    font-size: 1.2em;
+    border-radius: 3px;
+    border: 1px solid #D9D9D9; }
+  .slide5 button {
+    display: inline-block;
+    border-radius: 3px;
+    border: none;
+    font-size: 0.9em;
+    margin: 10px 0 50px 0;
+    padding: 0.5em 0.8em;
+    background: #ffb732;
+    border-bottom: 1px solid #498b50;
+    color: white;
+    -webkit-font-smoothing: antialiased;
+    font-weight: bold;
+    width: 100%;
+    text-align: center; }
+  .slide5 h2 {
+    text-align: center;
+    font-family: "Oswald";
+    font-size: 40px;
+    padding: 0 0 30px 0; }
+  .slide5 h3 {
+    text-align: center;
+    font-family: "Oswald";
+    font-size: 30px;
+    padding: 0 0 30px 0; }
+  .slide5 table, .slide5 p {
+    font-family: "Oswald";
+    font-size: 27px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px 0; }
+    .slide5 table th, .slide5 p th {
+      padding-right: 20px;
+      text-align: right; }
+    .slide5 table a, .slide5 p a {
+      text-decoration: none;
+      color: #005aff; }
+  .slide5 .contact-data {
+    padding: 5px 0; }
+
+button:hover, button:focus {
+  opacity: 0.75;
+  cursor: pointer; }
+
+button:active {
+  opacity: 1;
+  box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.1) inset; }
+
+.success {
+  padding: 1em;
+  margin-bottom: 0.75rem;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  color: #468847;
+  background-color: #dff0d8;
+  border: 1px solid #d6e9c6;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px; }
+
+.error {
+  padding: 1em;
+  margin-bottom: 0.75rem;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  color: #b94a48;
+  background-color: #f2dede;
+  border: 1px solid rgba(185, 74, 72, 0.3);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px; }
+
+.line {
+  height: 5px;
+  margin: 30px auto;
+  width: 75%;
+  background: #ffae19;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(90deg, #FFF, #ffd27f, #ffae19, #ffd27f, #FFF);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(90deg, #FFF, #ffd27f, #ffae19, #ffd27f, #FFF);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+
+.end {
+  width: 100%;
+  height: 50px;
+  background: #AFEEFF;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(0deg, #AFEEFF, #FFF);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(0deg, #AFEEFF, #FFF);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
 
 /*# sourceMappingURL=styl.css.map */
