--- a/css/styl.css
+++ b/css/styl.css
@@ -8,6 +8,52 @@ body {
   width: 100%;
   min-height: 100%; }
 
+#loading-screen {
+  background-color: black;
+  position: fixed;
+  height: 20vh;
+  width: 100%;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  text-align: center; }
+  #loading-screen img {
+    margin-top: 40vh; }
+
+#intro .bar {
+  background-color: black;
+  position: fixed;
+  height: 20vh;
+  width: 100%;
+  z-index: 9; }
+#intro .bar0 {
+  top: 95vh;
+  transform: skewy(2deg); }
+#intro .bar1 {
+  top: 85vh;
+  transform: skewY(-2deg); }
+#intro .bar2 {
+  top: 70vh;
+  transform: skewY(-2deg); }
+#intro .bar3 {
+  top: 60vh;
+  transform: skewy(2deg); }
+#intro .bar4 {
+  top: 45vh;
+  transform: skewy(2deg); }
+#intro .bar5 {
+  top: 35vh;
+  transform: skewy(-2deg); }
+#intro .bar6 {
+  top: 20vh;
+  transform: skewy(-2deg); }
+#intro .bar7 {
+  top: 10vh;
+  transform: skewy(2deg); }
+#intro .bar8 {
+  top: -5vh;
+  transform: skewy(2deg); }
+
 .content {
   margin: 0 auto;
   max-width: 1080px; }
@@ -21,8 +67,8 @@ body {
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(9deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8));
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  height: 120px;
-  top: -30px;
+  height: 150px;
+  top: -80px;
   position: fixed;
   z-index: 5;
   transform: skewY(2deg); }
@@ -31,11 +77,11 @@ body {
       display: none; } }
   #header .content {
     transform: skewY(-2deg);
-    margin-top: 40px;
+    margin-top: 70px;
     max-width: 1960px; }
     #header .content #nav {
       float: right;
-      margin: 20px 100px 0 0; }
+      margin: 30px 50px 0 0; }
       #header .content #nav ul {
         list-style: none;
         display: block;
@@ -196,6 +242,36 @@ body {
     height: 100px;
     margin: 0 10px;
     transition: all 0.3s; }
+  .slide3 #skill-bar {
+    position: relative;
+    width: 60%;
+    height: 40px;
+    background: #FFF;
+    margin: 20px auto 0 auto;
+    border: 3px solid #ffb732;
+    border-radius: 5px; }
+    .slide3 #skill-bar #skill-fill {
+      border-radius: 5px;
+      height: 100%;
+      width: 30%;
+      background: orange;
+      /* fallback for old browsers */
+      background: -webkit-linear-gradient(90deg, red, orange, red);
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(90deg, red, orange, red);
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      z-index: 1;
+      margin: 0 auto; }
+      .slide3 #skill-bar #skill-fill #count {
+        display: inline-block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        left: 0;
+        margin: 0;
+        font-family: "Oswald";
+        font-size: 23px; }
 
 .scale {
   transform: scale(1.1);
