--- a/css/styl.scss
+++ b/css/styl.scss
@@ -190,6 +190,7 @@ body {
   background:url('../img/slide1.jpg') 50% 0 no-repeat fixed;
   color: #fff;
   height: 1000px;
+  min-height: 100vh;
   margin: 0;
   padding: 200px 0 0 0;
   background-size: cover;
@@ -208,6 +209,7 @@ body {
     padding: 0;
     z-index: 1;
     position: relative;
+    text-shadow: -1px 0 grey, 0 1px grey, 1px 0 grey, 0 -1px grey;
   }
 }
 
@@ -217,6 +219,7 @@ body {
   display: flex;
   color: #333333;
   height: 100%;
+  min-height: 100vh;
   padding: 100px 0;
   text-align: justify;
   h3, p {
@@ -224,12 +227,16 @@ body {
   }
   h3 {
     font-size: 40px;
-    padding: 60px 0 30px 0;
+    padding: 10px 0 30px 0;
     text-align: center;
   }
   p {
     font-size: 30px;
     text-align: justify;
+    a{
+      color: orange;
+      text-decoration: none;
+    }
   }
 }
 
@@ -240,6 +247,7 @@ body {
   color: #333333;
   padding: 50px 0 200px 0;
   z-index: 1;
+  min-height: 100vh;
   text-align:center;
   .content {
     position: relative;
@@ -280,13 +288,13 @@ body {
     width: 60%;
     height: 40px;
     background: #FFF;
-    margin: 20px auto 0 auto;
+    margin: 60px auto 0 auto;
     border: 3px solid #ffb732;
     border-radius: 5px;
     #skill-fill{
       border-radius: 5px;
       height: 100%;
-      width: 30%;
+      width: 40%;
       background: orange; /* fallback for old browsers */
       background: -webkit-linear-gradient(90deg, red, orange, red); /* Chrome 10-25, Safari 5.1-6 */
       background: linear-gradient(90deg, red, orange, red); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -317,8 +325,9 @@ body {
 /* Slide 4 */
 .slide4 {
   display: flex;
+  min-height: 100vh;
   background-color: #FFF;
-  padding: 100px 0 50px 0;
+  padding: 100px 0 150px 0;
   .projectcontainer {
     position: relative;
     display: block;
@@ -368,13 +377,26 @@ body {
   background: #FFF; /* fallback for old browsers */
   color: #333333;
   height: 100%;
+  min-height: 100vh;
   padding: 50px 0 100px 0;
   text-align: justify;
+  .reference{
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    .logo {
+      display: inline-block;
+      margin: 0 10px;;
+      width: 100px;
+      height: 100px;
+    }
+  }
   #form-messages, .field {
     width: 100%;
     max-width: 500px;
     margin: 0 auto;
     position: relative;
+    text-align: center;
   }
   label {
     display: block;
