--- a/css/styl.css
+++ b/css/styl.css
@@ -19,6 +19,9 @@ body {
   text-align: center; }
   #loading-screen img {
     margin-top: 40vh; }
+    @media (max-width: 667px) {
+      #loading-screen img {
+        margin-top: 30vh; } }
 
 #intro .bar {
   background-color: black;
@@ -55,6 +58,7 @@ body {
   transform: skewy(2deg); }
 
 .content {
+  position: relative;
   margin: 0 auto;
   max-width: 1080px; }
 
@@ -154,19 +158,57 @@ body {
     /* SKEW */
     border-left: 0.5px solid transparent; }
 
+.skew-background-one {
+  background: url("../img/skew1.jpg") 50% 0 no-repeat fixed; }
+
+.skew-background-two {
+  background: url("../img/skew2.jpg") 50% 0 no-repeat fixed; }
+
+.skew-background-three {
+  background: url("../img/skew3.jpg") 50% 0 no-repeat fixed; }
+
 .skew-image {
-  background: url("../img/skew.jpg") 50% 0 no-repeat fixed;
+  background-size: cover;
   color: #fff;
   height: 300px;
   margin: 0;
-  padding: 0 0 0 0;
-  background-size: cover; }
+  padding: 0; }
+  @media (max-width: 667px) {
+    .skew-image {
+      background-size: cover;
+      background-attachment: scroll; } }
+
+.button-container {
+  width: 100%;
+  height: 50px;
+  margin: 30px auto;
+  clear: both;
+  position: absolute;
+  left: 0;
+  bottom: 75px; }
+  .button-container .bottom-button {
+    background-color: #ffc04c;
+    background-color: rgba(255, 192, 76, 0.8);
+    border-radius: 5px;
+    width: 100px;
+    height: 60px;
+    display: block;
+    margin: 0 auto; }
+    .button-container .bottom-button a {
+      display: inline-block;
+      width: 100%;
+      color: white;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      font-size: 55px;
+      text-decoration: none; }
 
 /* Slide 1 */
 .slide1 {
+  position: relative;
   background: url("../img/slide1.jpg") 50% 0 no-repeat fixed;
   color: #fff;
-  height: 1000px;
   min-height: 100vh;
   margin: 0;
   padding: 200px 0 0 0;
@@ -176,7 +218,8 @@ body {
   background-size: cover; }
   @media (max-width: 667px) {
     .slide1 {
-      background-attachment: scroll; } }
+      background-attachment: scroll;
+      padding-top: 30px; } }
   .slide1 h1 {
     font-family: "Oswald";
     font-weight: normal;
@@ -187,16 +230,20 @@ body {
     z-index: 1;
     position: relative;
     text-shadow: -1px 0 grey, 0 1px grey, 1px 0 grey, 0 -1px grey; }
+    @media (max-width: 667px) {
+      .slide1 h1 {
+        font-size: 40px; } }
 
 /* Slide 2 */
 .slide2 {
+  position: relative;
   background: #FFF;
   /* fallback for old browsers */
   display: flex;
   color: #333333;
   height: 100%;
   min-height: 100vh;
-  padding: 100px 0;
+  padding: 50px 0 200px 0;
   text-align: justify; }
   .slide2 h3, .slide2 p {
     font-family: "Oswald"; }
@@ -204,9 +251,17 @@ body {
     font-size: 40px;
     padding: 10px 0 30px 0;
     text-align: center; }
+    @media (max-width: 667px) {
+      .slide2 h3 {
+        font-size: 25px; } }
   .slide2 p {
     font-size: 30px;
     text-align: justify; }
+    @media (max-width: 667px) {
+      .slide2 p {
+        font-size: 20px;
+        margin-left: 15px;
+        margin-right: 15px; } }
     .slide2 p a {
       color: orange;
       text-decoration: none; }
@@ -218,6 +273,7 @@ body {
   color: #333333;
   padding: 50px 0 200px 0;
   z-index: 1;
+  height: 100%;
   min-height: 100vh;
   text-align: center; }
   .slide3 .content {
@@ -244,11 +300,18 @@ body {
     font-size: 40px;
     margin: 0 0 30px 0;
     padding: 40px 0 0 0; }
+    @media (max-width: 667px) {
+      .slide3 h2 {
+        font-size: 35px; } }
   .slide3 .logo {
     width: 100px;
     height: 100px;
     margin: 0 10px;
     transition: all 0.3s; }
+    @media (max-width: 667px) {
+      .slide3 .logo {
+        width: 80px;
+        height: 80px; } }
   .slide3 #skill-bar {
     position: relative;
     width: 60%;
@@ -257,6 +320,9 @@ body {
     margin: 60px auto 0 auto;
     border: 3px solid #ffb732;
     border-radius: 5px; }
+    @media (max-width: 667px) {
+      .slide3 #skill-bar {
+        width: 90%; } }
     .slide3 #skill-bar #skill-fill {
       border-radius: 5px;
       height: 100%;
@@ -287,10 +353,18 @@ body {
 
 /* Slide 4 */
 .slide4 {
+  position: relative;
   display: flex;
   min-height: 100vh;
   background-color: #FFF;
-  padding: 100px 0 150px 0; }
+  padding: 100px 0 200px 0; }
+  @media (max-width: 667px) {
+    .slide4 {
+      padding-top: 50px; }
+      .slide4 .button-container {
+        bottom: 50px; }
+      .slide4 .line {
+        margin: 50px 0; } }
   .slide4 .projectcontainer {
     position: relative;
     display: block;
@@ -307,6 +381,9 @@ body {
       width: 90%;
       margin: 0 auto;
       display: block; }
+      @media (max-width: 667px) {
+        .slide4 .projectcontainer .projectimg {
+          width: 80%; } }
     .slide4 .projectcontainer .project-description {
       display: none;
       position: absolute;
@@ -324,14 +401,21 @@ body {
     font-family: "Oswald";
     font-size: 40px;
     padding: 0 0 10px 0; }
+    @media (max-width: 667px) {
+      .slide4 h2 {
+        font-size: 35px; } }
   .slide4 p {
     font-family: "Oswald";
     font-size: 27px;
     text-align: center;
     margin: 0 auto; }
+    @media (max-width: 667px) {
+      .slide4 p {
+        font-size: 25px; } }
 
 /* Slide 5 */
 .slide5 {
+  position: relative;
   background: #FFF;
   /* fallback for old browsers */
   color: #333333;
