--- a/css/styl.scss
+++ b/css/styl.scss
@@ -208,7 +208,6 @@ body {
 
 .button-container{
   width: 100%;
-  height: 50px;
   margin: 30px auto;
   clear: both;
   position: absolute;
@@ -219,7 +218,6 @@ body {
     background-color: rgba(255,192,76,0.8);
     border-radius: 5px;
     width: 100px;
-    height: 60px;
     display: block;
     margin: 0 auto;
     a{
@@ -228,8 +226,8 @@ body {
       color: white;
       text-align: center;
       margin: 0;
-      padding: 0;
-      font-size: 55px;
+      padding: 5px;
+      font-size: 50px;
       text-decoration: none;
     }
   }
@@ -341,7 +339,9 @@ body {
     margin: 0 0 30px 0;
     padding: 40px 0 0 0;
     @media (max-width: 667px) {
-      font-size: 35px;
+      font-size: 30px;
+      margin-left: 15px;
+      margin-right: 15px;
     }
   }
   .logo {
@@ -374,6 +374,9 @@ body {
       background: linear-gradient(90deg, red, orange, red); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       z-index: 1;
       margin: 0 auto;
+      @media (max-width: 667px) {
+        width: 70%;
+      }
       #count{
         display: inline-block;
         position: absolute;
@@ -409,7 +412,7 @@ body {
       bottom: 50px;
     }
     .line{
-      margin: 50px 0;
+      margin: 50px auto;
     }
   }
   .projectcontainer {
@@ -441,7 +444,7 @@ body {
       z-index: 1000;
       color: #FFF;
       font-family: 'Wellfleet';
-      font-size: 1.2em;
+      font-size: 1em;
       padding: 10px 10px;
     }
   }
@@ -451,7 +454,9 @@ body {
     font-size: 40px;
     padding: 0 0 10px 0;
     @media (max-width: 667px) {
-      font-size: 35px;
+      font-size: 30px;
+      margin-left: 15px;
+      margin-right: 15px;
     }
   }
   p {
@@ -461,6 +466,8 @@ body {
     margin: 0 auto;
     @media (max-width: 667px) {
       font-size: 25px;
+      margin-left: 15px;
+      margin-right: 15px;
     }
   }
 }
@@ -505,6 +512,9 @@ body {
     font-size: 1.2em;
     border-radius: 3px;
     border: 1px solid #D9D9D9;
+    @media (max-width: 667px) {
+      width: 90%;
+    }
   }
   textarea {
     width: 100%;
@@ -513,6 +523,9 @@ body {
     font-size: 1.2em;
     border-radius: 3px;
     border: 1px solid #D9D9D9;
+    @media (max-width: 667px) {
+      width: 90%;
+    }
   }
   button {
     display: inline-block;
@@ -528,18 +541,30 @@ body {
     font-weight: bold;
     width: 100%;
     text-align: center;
+    @media (max-width: 667px) {
+      width: 90%;
+    }
   }
   h2 {
     text-align: center;
     font-family: "Oswald";
     font-size: 40px;
-    padding: 0 0 30px 0;
+    @media (max-width: 667px) {
+      font-size: 30px;
+      margin-left: 15px;
+      margin-right: 15px;
+    }
   }
   h3 {
     text-align: center;
     font-family: "Oswald";
     font-size: 30px;
     padding: 0 0 30px 0;
+    @media (max-width: 667px) {
+      font-size: 25px;
+      margin-left: 15px;
+      margin-right: 15px;
+    }
   }
   table, p {
     font-family: "Oswald";
@@ -547,6 +572,9 @@ body {
     text-align: center;
     margin: 0 auto;
     padding: 20px 0;
+    @media (max-width: 667px) {
+      font-size: 25px;
+    }
     th {
       padding-right: 20px;
       text-align: right;
@@ -555,6 +583,12 @@ body {
       text-decoration: none;
       color: #005aff;
       }
+    p {
+      @media (max-width: 667px) {
+        margin-left: 15px;
+        margin-right: 15px;
+      }
+    }
   }
   .contact-data {
     padding: 5px 0;
