--- a/css/styl.css
+++ b/css/styl.css
@@ -98,9 +98,9 @@ body {
         #header .content #nav li a {
           color: #fff;
           opacity: 0.6;
-          font-size: 20px;
+          font-size: 22px;
           text-decoration: none;
-          font-family: 'Wellfleet'; }
+          font-family: 'Alegreya'; }
         #header .content #nav li a.active {
           color: #fff;
           opacity: 1;
@@ -207,7 +207,7 @@ body {
   position: relative;
   background: url("../img/slide1.jpg") 50% 0 no-repeat fixed;
   color: #fff;
-  min-height: 100vh;
+  min-height: 110vh;
   margin: 0;
   padding: 200px 0 0 0;
   background-size: cover;
@@ -269,7 +269,7 @@ body {
   position: relative;
   display: block;
   color: #333333;
-  padding: 50px 0 200px 0;
+  padding: 20px 0 220px 0;
   z-index: 1;
   height: 100%;
   min-height: 100vh;
@@ -379,10 +379,15 @@ body {
     @media (max-width: 667px) {
       .slide4 .projectcontainer {
         width: 100%; } }
+    @media (min-width: 667px) and (max-width: 960px) {
+      .slide4 .projectcontainer {
+        width: 50%; } }
     .slide4 .projectcontainer .projectimg {
       height: 90%;
       width: 90%;
       margin: 0 auto;
+      border: 3px solid rgba(25, 140, 255, 0.8);
+      border-radius: 5px;
       display: block; }
       @media (max-width: 667px) {
         .slide4 .projectcontainer .projectimg {
@@ -390,7 +395,8 @@ body {
     .slide4 .projectcontainer .project-description {
       display: none;
       position: absolute;
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: rgba(25, 140, 255, 0.8);
+      border-radius: 5px;
       width: 90%;
       bottom: 10%;
       left: 5%;
@@ -413,6 +419,7 @@ body {
     font-family: "Oswald";
     font-size: 27px;
     text-align: center;
+    padding-bottom: 50px;
     margin: 0 auto; }
     @media (max-width: 667px) {
       .slide4 p {
